jquery: activated lightbox

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Rainy Day</title>
-	<link type="text/css" rel="stylesheet" href="css/style.css">
-	<script src="gallery/script.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="script.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
