new jquery: toggling class for lightbox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 					</div> -->
 				</a>
 			</li>
-		</ul>	
+		</ul>
+		<div class="lightbox">
+            <div id="content">
+                 <img src="">
+            </div>
+        </div>	
 	</div>
 	<!-- <footer>
 		<p>&copy; Our Group 2014</p>
